{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 117,
  "lineage": "151ee38b-33fe-8d30-e0de-14976f79c4c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:886436936938:instance/i-09ff557db904a5465",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ff557db904a5465",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f82ac85316d8dbc7",
            "private_dns": "ip-10-0-2-212.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.212",
            "public_dns": "ec2-54-87-238-214.compute-1.amazonaws.com",
            "public_ip": "54.87.238.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d52e734ee5e806b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091aad3043e973085",
            "tags": {
              "environment": "dev",
              "name": "ec2-api-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "environment": "dev",
              "name": "ec2-api-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03974ee8cd9f4d8f3"
            ]
          },
          "dependencies": [
            "module.sg-api.aws_security_group.this",
            "module.sg-api.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:886436936938:instance/i-0c9f5f183024e462c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9f5f183024e462c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d0faf9d549b62f6",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-18-208-128-213.compute-1.amazonaws.com",
            "public_ip": "18.208.128.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07678ec8cb280cee6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8b706b7ea530ff2",
            "tags": {
              "environment": "dev",
              "name": "ec2-client-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "environment": "dev",
              "name": "ec2-client-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08d0ff598ecf46159"
            ]
          },
          "dependencies": [
            "module.sg-client.aws_security_group.this",
            "module.sg-client.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-indexer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:886436936938:instance/i-087b0322eef056584",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087b0322eef056584",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c838b2550ed479d6",
            "private_dns": "ip-10-0-4-52.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.52",
            "public_dns": "ec2-3-234-229-67.compute-1.amazonaws.com",
            "public_ip": "3.234.229.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02284df48b0d9ef80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d77083b3d75507d",
            "tags": {
              "environment": "dev",
              "name": "ec2-indexer-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "environment": "dev",
              "name": "ec2-indexer-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bde41944f2236834"
            ]
          },
          "dependencies": [
            "module.sg-indexer.aws_security_group.this",
            "module.sg-indexer.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1:886436936938:instance/i-076ebaf61cc8a6506",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076ebaf61cc8a6506",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "challenge",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04206f7b71e98f085",
            "private_dns": "ip-10-0-3-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.171",
            "public_dns": "ec2-50-19-163-69.compute-1.amazonaws.com",
            "public_ip": "50.19.163.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08995e1d609322664",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025833eac6f2c43e6",
            "tags": {
              "environment": "dev",
              "name": "ec2-storage-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "environment": "dev",
              "name": "ec2-storage-msc-dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06577b7a9590e25b3"
            ]
          },
          "dependencies": [
            "module.sg-storage.aws_security_group.this",
            "module.sg-storage.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-api",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:security-group/sg-03974ee8cd9f4d8f3",
            "description": "Security group for API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow indexer to connect to Storage on port 4080",
                "from_port": 4080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4080
              }
            ],
            "id": "sg-03974ee8cd9f4d8f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sg_api_msc_dev-20250120155604615200000004",
            "name_prefix": "sg_api_msc_dev-",
            "owner_id": "886436936938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_api_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "sg_api_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg-api",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2291190672",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03974ee8cd9f4d8f3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-api.aws_security_group.this",
            "module.sg-api.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-api",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow indexer to connect to Storage on port 4080",
            "from_port": 4080,
            "id": "sgrule-1959745828",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03974ee8cd9f4d8f3",
            "security_group_rule_id": "sgr-07208abbf46033110",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-api.aws_security_group.this",
            "module.sg-api.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-api",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-38175578",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03974ee8cd9f4d8f3",
            "security_group_rule_id": "sgr-03a95a834659fd0c6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-api.aws_security_group.this",
            "module.sg-api.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-client",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:security-group/sg-08d0ff598ecf46159",
            "description": "Security group for client",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d0ff598ecf46159",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_client_msc_dev-20250120155603871500000002",
            "name_prefix": "sg_client_msc_dev-",
            "owner_id": "886436936938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_client_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "sg_client_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg-client",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2195767006",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08d0ff598ecf46159",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-client.aws_security_group.this",
            "module.sg-client.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-client",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-560395929",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08d0ff598ecf46159",
            "security_group_rule_id": "sgr-0fa26a99a6b25ef76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-client.aws_security_group.this",
            "module.sg-client.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-indexer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:security-group/sg-0bde41944f2236834",
            "description": "Security group for Indexer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow indexer to connect to Storage on port 4080",
                "from_port": 4080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4080
              }
            ],
            "id": "sg-0bde41944f2236834",
            "ingress": [],
            "name": "sg_indexer_msc_dev-20250120155604522100000003",
            "name_prefix": "sg_indexer_msc_dev-",
            "owner_id": "886436936938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_indexer_msc_dev"
            },
            "tags_all": {
              "Name": "sg_indexer_msc_dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg-indexer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow indexer to connect to Storage on port 4080",
            "from_port": 4080,
            "id": "sgrule-2617967397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bde41944f2236834",
            "security_group_rule_id": "sgr-01009f51d18997cd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4080,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-indexer.aws_security_group.this",
            "module.sg-indexer.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:security-group/sg-06577b7a9590e25b3",
            "description": "Security group for Storage",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06577b7a9590e25b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allows connection to the Storage API",
                "from_port": 4080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4080
              }
            ],
            "name": "sg_storage_msc_dev-20250120155604648700000005",
            "name_prefix": "sg_storage_msc_dev-",
            "owner_id": "886436936938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_storage_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "sg_storage_msc_dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg-storage",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3824781176",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06577b7a9590e25b3",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-storage.aws_security_group.this",
            "module.sg-storage.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg-storage",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allows connection to the Storage API",
            "from_port": 4080,
            "id": "sgrule-207414700",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06577b7a9590e25b3",
            "security_group_rule_id": "sgr-01407feb712943413",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg-storage.aws_security_group.this",
            "module.sg-storage.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:network-acl/acl-07bd96348f0344696",
            "default_network_acl_id": "acl-07bd96348f0344696",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07bd96348f0344696",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "886436936938",
            "subnet_ids": [
              "subnet-025833eac6f2c43e6",
              "subnet-03d77083b3d75507d",
              "subnet-091aad3043e973085",
              "subnet-0b8b706b7ea530ff2"
            ],
            "tags": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:route-table/rtb-07775a4648fc66db7",
            "default_route_table_id": "rtb-07775a4648fc66db7",
            "id": "rtb-07775a4648fc66db7",
            "owner_id": "886436936938",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:security-group/sg-0142d7a06ed61fb6d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0142d7a06ed61fb6d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "886436936938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-default",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:internet-gateway/igw-0150d065820519cd6",
            "id": "igw-0150d065820519cd6",
            "owner_id": "886436936938",
            "tags": {
              "Name": "vpc-msc-dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0150d065820519cd6",
            "id": "r-rtb-0f2b259244917aeca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2b259244917aeca",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:route-table/rtb-0f2b259244917aeca",
            "id": "rtb-0f2b259244917aeca",
            "owner_id": "886436936938",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0150d065820519cd6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-msc-dev-public",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-public",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa01f2da6fa15b99",
            "route_table_id": "rtb-0f2b259244917aeca",
            "subnet_id": "subnet-0b8b706b7ea530ff2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f408d02ecf08a376",
            "route_table_id": "rtb-0f2b259244917aeca",
            "subnet_id": "subnet-091aad3043e973085"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552a4a210221e3d6",
            "route_table_id": "rtb-0f2b259244917aeca",
            "subnet_id": "subnet-025833eac6f2c43e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91592283fb41ad1",
            "route_table_id": "rtb-0f2b259244917aeca",
            "subnet_id": "subnet-03d77083b3d75507d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:subnet/subnet-0b8b706b7ea530ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b706b7ea530ff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886436936938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-msc-dev-public-us-east-1a",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-public-us-east-1a",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:subnet/subnet-091aad3043e973085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091aad3043e973085",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886436936938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-msc-dev-public-us-east-1b",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-public-us-east-1b",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:subnet/subnet-025833eac6f2c43e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025833eac6f2c43e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886436936938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-msc-dev-public-us-east-1c",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-public-us-east-1c",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:subnet/subnet-03d77083b3d75507d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d77083b3d75507d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886436936938",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-msc-dev-public-us-east-1d",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev-public-us-east-1d",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "vpc_id": "vpc-03024e99bd820bfbf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886436936938:vpc/vpc-03024e99bd820bfbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07bd96348f0344696",
            "default_route_table_id": "rtb-07775a4648fc66db7",
            "default_security_group_id": "sg-0142d7a06ed61fb6d",
            "dhcp_options_id": "dopt-085f54611a51586d2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03024e99bd820bfbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07775a4648fc66db7",
            "owner_id": "886436936938",
            "tags": {
              "Name": "vpc-msc-dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            },
            "tags_all": {
              "Name": "vpc-msc-dev",
              "environment": "dev",
              "owner": "melisadavila2001@gmail.com",
              "project": "msc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}